--- a/src/app/events/event-details/event-detail.component.html
+++ b/src/app/events/event-details/event-detail.component.html
@@ -21,4 +21,15 @@
       </address>
     </div>
   </div>
+  <hr>
+<div class="row">
+  <div class="col-md-2">
+    <h3 style="margin:0">Sessions</h3>
+  </div>
+  <div class="col-md-2">
+    <a (click)="addSession()">Add Session</a>
+  </div>
+</div>
+  <session-list [sessions]="event?.sessions" *ngIf="!addMode"></session-list>
+  <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)"></create-session>
 </div>
