--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -59,5 +59,6 @@
 
     <button type="submit" [disabled]="newEventForm.invalid" class="btn btn-primary">Save</button>
     <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+    <!--test -->
   </form>
 </div>
