--- a/src/app/events/event-details/event-detail.component.html
+++ b/src/app/events/event-details/event-detail.component.html
@@ -46,6 +46,6 @@
       <a (click)="addSession()">Add Session</a>
     </div>
   </div>
-  <session-list [filterBy]="filterBy" [sortBy]="sortBy"  [sessions]="event?.sessions" *ngIf="!addMode"></session-list>
+  <session-list [eventId]="event?.id" [filterBy]="filterBy" [sortBy]="sortBy"  [sessions]="event?.sessions" *ngIf="!addMode"></session-list>
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
